<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key" translatable="false">stocks</string>

    <string name="chart_no_data">No data</string>


    <string name="pref_display_mode_title">Display Mode</string>
    <string name="pref_display_mode_key" translatable="false">displayMode</string>
    <string name="pref_display_mode_default">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>

    <string name="default_stocks_yahoo" translatable="false">YHOO</string>
    <string name="default_stocks_apple" translatable="false">AAPL</string>
    <string name="default_stocks_microsoft" translatable="false">MSFT</string>
    <string name="default_stocks_facebook" translatable="false">FB</string>


    <string name="action_change_units">@string/pref_display_mode_key</string>


    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint" translatable="false">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_stock_not_found">Symbol %s is invalid!</string>
    <string name="error_no_network">No network connectivity! Will load stock details when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>

    <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>
    <string name="title_activity_stock_detail" translatable="false">StockDetailActivity</string>

    <string name="action_settings">Settings</string>

    <string name="fab_content_description">Use this button to add a new stock to track</string>
    <string name="price_content_description">Price</string>
    <string name="change_content_description">Change in Price</string>
    <string name="symbol_content_description">Stock Symbol</string>
    <string name="change_units_content_description">Change Units</string>

    <string name="widget_text">Stock Track</string>
    <string name="title_widget_stock">Stock Today</string>

    <!--Detail Widget-->
    <string name="empty_quote_list">NO STOCK QUOTES</string>
    <string name="title_widget_detail">STOCK QUOTES</string>
    <string name="widget_title">STOCK HAWK</string>

</resources>
